// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SupplierName /> #handleSubmit() calls TEMPLATE_API_HELPERS.patchFlightBooking 1`] = `
Array [
  Array [
    Object {
      "model": "model",
    },
    Object {
      "readOnly": false,
      "value": "Some value",
      "variant": null,
    },
  ],
]
`;

exports[`<SupplierName /> #render() still matches snapshot 1`] = `
<ForEachEventVariant
  renderDefault={[Function]}
  renderField={[Function]}
  renderLabelValue={[Function]}
  variant={null}
/>
`;

exports[`<SupplierName /> #renderEditable() still matches snapshot 1`] = `
<WithStyles(GridItem)>
  <WithStyles(EditableTextForm)
    label={
      <FormattedMessage
        defaultMessage="Supplier Name"
        id="app.Event.parts.FlightBooking.SupplierName.supplierName"
      />
    }
    name="supplier"
    onSubmit={[Function]}
    placeholder="Click to specify who this flight is booked with"
    readOnly={false}
    value="Some value"
  />
</WithStyles(GridItem)>
`;

exports[`<SupplierName /> #renderField() still matches snapshot 1`] = `
<WithStyles(GridItem)
  xs={true}
>
  <TextField
    label={
      <FormattedMessage
        defaultMessage="Supplier Name"
        id="app.Event.parts.FlightBooking.SupplierName.supplierName"
      />
    }
    maxLength={0}
    minLength={0}
    name="supplier"
    type="text"
    validationErrors={Object {}}
    validations={Object {}}
    value="Some value"
  />
</WithStyles(GridItem)>
`;

exports[`<SupplierName /> renderLabelValue() should renderLabelValue 1`] = `
<div>
  <WithStyles(GridItem)>
    value
  </WithStyles(GridItem)>
</div>
`;
